corrected dark mode styles

--- a/Frontend/src/styles/Details.css
+++ b/Frontend/src/styles/Details.css
@@ -20,7 +20,7 @@
 
 .details-selectors.light {
     width: 700px;
-    height: 280px;
+    height: 320px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -29,7 +29,7 @@
 
 .details-selectors.dark {
     width: 700px;
-    height: 280px;
+    height: 320px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -60,23 +60,70 @@
     margin-bottom: 4px;
 }
 
-.details-name-container, .details-phone-btn, .details-email2-container, .details-location2-container, .details-street2-container, .details-house2-container, .details-city2-container, .details-plot2-container {
+.details-name-container, 
+.details-phone-btn, 
+.details-email2-container, 
+.details-location2-container, 
+.details-street2-container, 
+.details-house2-container, 
+.details-city2-container, 
+.details-plot2-container,
+.details-coordinates-btn,
+.details-coordinates2-btn {
     width: 260px;
-    height: 30px;
+    height: 35px;
     display: flex;
     align-items: center;
     border-radius: 9px;
     font-size: 15px;
     border: 1px solid #D9D9D9;
     margin-right: 40px;
-    
+}
+
+.details-name, 
+.details-phone, 
+.details-email, 
+.details-location, 
+.details-street, 
+.details-house, 
+.details-city, 
+.details-plot {
+    color: #000000;
+    margin-left: 20px;
+}
+
+
+
+.details-coordinates-btn {
+    width: 240px;
+    color: #ffffff;
+    padding-left: 20px;
+    background-color: #0575E6;
+
+}
+
+.details-coordinates-btn:hover {
+    cursor: pointer;
 }
 
 .details-value, .details-phone {
     font-size: 15px;
-    color: #878787;
+    color: #000000;
     margin: 0 20px;
 }
+
+.details-value.dark, .details-phone.dark {
+    color: #ffffff;
+    margin-left: 20px;
+}
+
+.update-details-btn-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 20px;
+}
+
 
 .update-details-container {
     width: 100px;
@@ -109,3 +156,35 @@
     color: #ebebeb;
     border-radius: 10px;
 }
+
+.update-coords-details-container {
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #D9D9D9;
+    color: #585858;
+    border-radius: 10px;
+    margin-left: 10px;
+}
+
+.update-coords-details-container.dark {
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #ebebeb;
+    color: #ebebeb;
+    border-radius: 10px;
+    margin-left: 10px;
+}
+
+.update-coords-details-container:hover {
+    cursor: pointer;
+    background-color: #0575E6;
+    color: #ffffff;
+}
+
+
